Fix: gap filters card

--- a/src/style/_list.scss
+++ b/src/style/_list.scss
@@ -33,7 +33,7 @@
       display: flex;
       height: 15px;
       align-items: center;
-      gap: 25px;
+      gap: 15px;
       font-weight: 400;
       font-size: 14px;
       line-height: 15px;
